packages/ansiq-core/tests/ui/reactive_handles_are_not_send.stderr
error: future cannot be sent between threads safely
  --> tests/ui/reactive_handles_are_not_send.rs:16:5
   |
16 | /     tokio::spawn(async move {
17 | |         count.set(2);
18 | |         let _ = doubled.get();
19 | |         effect.stop();
20 | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/tests/ui/reactive_handles_are_not_send.rs:16:18: 16:28}`, the trait `Send` is not implemented for `Rc<()>`
note: captured value is not `Send`
  --> tests/ui/reactive_handles_are_not_send.rs:19:9
   |
19 |         effect.stop();
   |         ^^^^^^ has type `EffectHandle` which is not `Send`
note: required by a bound in `tokio::spawn`
  --> $CARGO/tokio-$VERSION/src/task/spawn.rs
   |
   |     pub fn spawn<F>(future: F) -> JoinHandle<F::Output>
   |            ----- required by a bound in this function
   |     where
   |         F: Future + Send + 'static,
   |                     ^^^^ required by this bound in `spawn`
